# scanner

./: .cursorignore  .gitignore  Cargo.toml  DATABASE_SETUP.md  README.md  SPIKE_DETECTION_ANALYSIS.md  build.sh  config.js  description.md  env.example  examples.md  index.js  package-lock.json  package.json  scanner.js  utils.js
degen-zone/: .gitignore  Cargo.toml
degen-zone/src/: main.rs
meme-zone/: .gitignore  Cargo.toml  README.md  pump-fun-monitor-plan.md
meme-zone-v2/: Cargo.toml  README.md
meme-zone-v2/src/: lib.rs  main.rs  platform_trait.rs  scanner.rs
meme-zone/moonit/: .gitignore
meme-zone/moonit/src/: main.rs
meme-zone/pump-fun/: 6EF8rrecthR5Dkzon8Nwu78hRvfCKubJ14M5uBEwF6P.json
meme-zone/pump-fun/src/: main.rs
meme-zone/raydium-launchlab/: Cargo.toml
meme-zone/raydium-launchlab/src/: main.rs
meme-zone/src/: main.rs  platform_trait.rs
migrations/: 001_initial_schema.sql
src/: api.rs  block_fetcher.rs  config.rs  console_output.rs  database.rs  deduplication.rs  grpc_client.rs  grpc_stream.rs  lib.rs  main.rs  scanner.rs  spike_detector.rs  token_tracker.rs  transaction_parser.rs  types.rs  utils.rs
