[package]
name = "solana-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.2.7"
solana-sdk = "2.2.2"
solana-transaction-status = "2.2.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
bs58 = "0.5"
# Step 6: gRPC streaming dependencies
yellowstone-grpc-client = "6.1.0"
yellowstone-grpc-proto = "6.1.0"
tonic = "0.10"
# Step 7: LRU cache for deduplication
lru = "0.12"