[package]
name = "solana-token-scanner"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
solana-client = "2.1.21"
solana-sdk = "2.1.21"
solana-transaction-status = "2.1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
dashmap = "5.5"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] } 
# gRPC dependencies for Yellowstone Geyser integration
# yellowstone-grpc-client = "=6.1.0"
# yellowstone-grpc-proto = "=6.1.0"
# bs58 = "0.5.0"
# # LRU cache for de-duplication
# lru = "0.12"
# # Futures for stream handling
# futures = "0.3"
# # Tonic for gRPC transport
# tonic = "0.12"
