[package]
name = "raydium-monitor"
version = "0.1.0"
edition = "2021"
description = "Rust-based Pump.fun token lifecycle monitor"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
solana-client = "2.1.21"
solana-sdk = "2.1.21"
solana-transaction-status = "2.1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
dashmap = "5.5"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] } 
bs58 = "0.5.1"
futures-util = "0.3.31"
crossbeam-channel = "0.5.15"
base64 = "0.21"
borsh = "1.5.1"
solana-account-decoder = "2.1.21"
hex = "0.4.3"
# gRPC dependencies for Yellowstone Geyser integration
# yellowstone-grpc-client = "=6.1.0"
# yellowstone-grpc-proto = "=6.1.0"
# bs58 = "0.5.0"
# # LRU cache for de-duplication
# lru = "0.12"
# # Futures for stream handling
# futures = "0.3"
# # Tonic for gRPC transport
# tonic = "0.12"
